@@ -53,7 +53,10 @@ CHANGELOG
 - The file names passed to the preprocessing hooks are now normalised.
 - Changed the opened_include_file() preprocessing hook to receive the correct
   relative path even if the included file was found in the current directory.
-  
+- Fixed a problem wrt the include path handling, which prevented relative paths
+  from beeing correctly used to construct the required absolute paths at 
+  include file search time.
+
 Mon Feb 21 09:30:04 WEST 2005
 Version 1.1.14 (Fixes in response to the Boost review)
 
